--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Aruna V</span>
+                    Hi, I'm <span>Aruna</span>
                     A Web Developer.
                 </h1>
                 <p>
